<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#cee8f9"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/study_at_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:scaleType="centerCrop"/>

    <ImageView
        android:src="@drawable/udacity_logo_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerInside"
        android:background="#FFFFFF"
        android:padding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/make_learning_fun_study_online_with_udacity"
        android:background="#cee8f9"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="4dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/learn_the_skills_you_need_to_land_the_job_you_want_to_build_the_life_you_deserve"
        android:background="#cee8f9"
        android:textSize="15sp"
        android:textStyle="bold"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingBottom="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/placeholder"
            android:background="#FFFFFF"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/_2465_latham_st_mountain_view_ca_94043"
            android:autoLink="map"
            android:textColorLink="#000000"
            android:background="#FFFFFF"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/telephone"
            android:background="#FFFFFF"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/_650_555_5555"
            android:autoLink="phone"
            android:textColorLink="#000000"
            android:background="#FFFFFF"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/computer"
            android:background="#FFFFFF"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/www_udacity_com"
            android:autoLink="web"
            android:textColorLink="#000000"
            android:background="#FFFFFF"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

</LinearLayout>